--- a/src/features/components/index/TopSection/RecentImages/styles.module.css
+++ b/src/features/components/index/TopSection/RecentImages/styles.module.css
@@ -44,6 +44,7 @@
     .cc {
         font-size: 0.8rem;
         color: lightgray;
+        margin-right: -0.4rem;
     }
 }
 
@@ -56,11 +57,13 @@
     width: 100%;
     height: 100%;
 
-    filter: blur(15px) brightness(0.9);
+    overflow: hidden;
 
     img {
-        width: 100%;
-        height: 100%;
+        width: calc(100% + 60px);
+        height: calc(100% + 60px);
+        margin: -30px;
         object-fit: cover;
+        filter: blur(30px) brightness(0.9);
     }
 }
