--- a/src/features/components/index/TopSection/styles.module.css
+++ b/src/features/components/index/TopSection/styles.module.css
@@ -2,3 +2,25 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
+
+.introduction {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .wrapper {
+        max-height: unset;
+        width: 100%;
+        height: 100%;
+
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+}
