--- a/src/features/components/index/TopSection/RecentPhoto/styles.module.css
+++ b/src/features/components/index/TopSection/RecentPhoto/styles.module.css
@@ -34,6 +34,11 @@
     justify-content: flex-end;
 
     .title {
+        font-family: "Montserrat", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+
         color: white;
         font-size: 2rem;
         padding: 1rem 0 0;
@@ -44,7 +49,6 @@
     .cc {
         font-size: 0.8rem;
         color: lightgray;
-        margin-right: -0.4rem;
     }
 }
 
@@ -65,5 +69,11 @@
         margin: -30px;
         object-fit: cover;
         filter: blur(30px) brightness(0.9);
+    }
+}
+
+@media (max-width: 1180px) {
+    .wrapper {
+        min-height: 100vh;
     }
 }
