--- a/src/features/components/index/TopSection/styles.module.css
+++ b/src/features/components/index/TopSection/styles.module.css
@@ -11,9 +11,46 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    position: relative;
 }
 
-@media (max-width: 768px) {
+.sns {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    width: 100%;
+
+    padding: 0;
+}
+
+.title {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2.5rem;
+    writing-mode: vertical-lr;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    margin: 0;
+    padding: 1rem 0.6rem;
+
+    border-left: 1px solid black;
+}
+
+.title::first-letter {
+    color: #00adc1;
+}
+
+@media (max-width: 1180px) {
     .wrapper {
         max-height: unset;
         width: 100%;
@@ -22,5 +59,26 @@
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
+    }
+
+    .title {
+        width: 100%;
+        height: auto;
+        writing-mode: horizontal-tb;
+        border-left: none;
+        border-bottom: 1px solid black;
+        padding: 0.6rem 1rem;
+    }
+
+    .introduction {
+        min-height: 70vh;
+    }
+}
+
+@media (max-width: 768px) {
+    .sns {
+        flex-direction: column;
+        padding: 0 3rem;
+        position: static;
     }
 }
