--- a/src/features/components/index/TopSection/Introduction/styles.module.css
+++ b/src/features/components/index/TopSection/Introduction/styles.module.css
@@ -53,3 +53,36 @@
 .active {
     --intro-active: 1;
 }
+
+@media (max-width: 768px) {
+    .wrapper {
+        flex-direction: column;
+    }
+
+    .icon {
+        width: 8rem;
+        height: 8rem;
+
+        transform: translateY(calc(var(--intro-active, -1) * -1rem + 1rem));
+    }
+
+    .divider {
+        height: 1px;
+        width: calc(var(--intro-active, 0) * 8rem);
+        margin: 3rem 0;
+        transition: width 0.2s cubic-bezier(0.77, 0, 0.175, 1);
+    }
+
+    .description {
+        transform: translateY(calc(var(--intro-active, -0.5) * 0.5rem - 0.5rem));
+
+        h3 {
+            font-size: 1.1rem;
+        }
+
+        .affiliation {
+            font-size: 0.8rem;
+        }
+    }
+
+}
