--- a/src/features/components/index/TopSection/RecentPhoto/styles.module.css
+++ b/src/features/components/index/TopSection/RecentPhoto/styles.module.css
@@ -13,6 +13,18 @@
         height: 100%;
         object-fit: contain;
     }
+
+    .nophoto {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        p {
+            color: white;
+        }
+    }
 }
 
 .overlay {
@@ -25,13 +37,37 @@
     height: 100%;
     padding: 1rem 2rem;
 
-    background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgba(255,255,255,0) 80%, rgba(0,0,0,0.6) 100%);
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,0.8) 0%, rgba(255,255,255,0) 20%, rgba(255,255,255,0) 80%, rgba(0,0,0,0.8) 100%);
 
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
+
+    .header {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 1rem 2rem;
+
+        font-family: "Montserrat", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        color: white;
+
+        .place {
+            font-size: 1.2rem;
+            margin-bottom: 0.2rem;
+        }
+
+        .date {
+            margin: 0;
+            font-size: 1.0rem;
+        }
+    }
 
     .title {
         font-family: "Montserrat", sans-serif;
