--- a/src/features/components/index/TopSection/SNSIcon/styles.module.css
+++ b/src/features/components/index/TopSection/SNSIcon/styles.module.css
@@ -9,6 +9,7 @@
     cursor: pointer;
     font-size: 1rem;
     transition: filter 0.3s;
+    text-decoration: none;
 
     span {
         margin-bottom: 0.2rem;
@@ -17,4 +18,11 @@
 
 .icon:hover {
     filter: brightness(0.9);
+}
+
+@media (max-width: 768px){
+    .icon {
+        width: fit-content;
+        min-width: 60vw;
+    }
 }
