--- a/src/features/components/index/TopSection/styles.module.css
+++ b/src/features/components/index/TopSection/styles.module.css
@@ -21,33 +21,12 @@
     justify-content: center;
 
     position: absolute;
-    bottom: 1rem;
+    bottom: 0;
     left: 0;
     width: 100%;
+    margin-bottom: 2rem;
 
     padding: 0;
-}
-
-.title {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 2.5rem;
-    writing-mode: vertical-lr;
-
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    margin: 0;
-    padding: 1rem 0.6rem;
-
-    border-left: 1px solid black;
-}
-
-.title::first-letter {
-    color: #00adc1;
 }
 
 @media (max-width: 1180px) {
@@ -58,16 +37,6 @@
 
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-    }
-
-    .title {
-        width: 100%;
-        height: auto;
-        writing-mode: horizontal-tb;
-        border-left: none;
-        border-bottom: 1px solid black;
-        padding: 0.6rem 1rem;
     }
 
     .introduction {
@@ -76,9 +45,14 @@
 }
 
 @media (max-width: 768px) {
+    .introduction {
+        padding-top: 8rem;
+    }
+
     .sns {
         flex-direction: column;
-        padding: 0 3rem;
+        padding: 2rem 3rem;
         position: static;
+        align-items: center;
     }
 }
