--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,15 @@
 * {
   box-sizing: border-box;
 }
+
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: #00adc1;
+  text-decoration: dashed underline;
+  transition: color 0.2s ease;
 }
+
 a:hover {
-  color: #535bf2;
+  color: #2d7282;
 }
 
 body {
