--- a/src/features/components/index/WorksAndAnnouncements/styles.module.css
+++ b/src/features/components/index/WorksAndAnnouncements/styles.module.css
@@ -1,20 +1,20 @@
 .wrapper::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: calc(5.011rem - 1px);
-    height: 100%;
-    border-right: black 1px solid;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc(5.011rem - 1px);
+  height: 100%;
+  border-right: black 1px solid;
 }
 
 @media (max-width: 1180px) {
-    .wrapper::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 0;
-        height: 0;
-    }
+  .wrapper::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+  }
 }
