--- a/src/features/components/index/TopSection/Introduction/styles.module.css
+++ b/src/features/components/index/TopSection/Introduction/styles.module.css
@@ -1,88 +1,91 @@
 .wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 
-    background-color: white;
-    padding: 2rem;
-    box-shadow: 0 0 22px -15px #aaaaaa;
-    border-radius: 0.8rem;
+  background-color: white;
+  padding: 2rem;
+  box-shadow: 0 0 22px -15px #aaaaaa;
+  border-radius: 0.8rem;
 }
 
 .icon {
-    width: 12rem;
-    height: 12rem;
-    border: 1px solid #dddddd;
-    border-radius: 50%;
-    opacity: calc(var(--intro-active, 0));
-    transform: translateX(calc(var(--intro-active, -1) * -1rem + 1rem));
+  width: 12rem;
+  height: 12rem;
+  border: 1px solid #dddddd;
+  border-radius: 50%;
+  opacity: calc(var(--intro-active, 0));
+  transform: translateX(calc(var(--intro-active, -1) * -1rem + 1rem));
 
-    transition: opacity 0.3s cubic-bezier(0.77, 0, 0.175, 1), transform 0.3s cubic-bezier(0.77, 0, 0.175, 1);
-    transition-delay: 0.1s;
+  transition:
+    opacity 0.3s cubic-bezier(0.77, 0, 0.175, 1),
+    transform 0.3s cubic-bezier(0.77, 0, 0.175, 1);
+  transition-delay: 0.1s;
 }
 
 .divider {
-    width: 1px;
-    height: calc(var(--intro-active, 0) * 8rem);
-    margin: 0 3rem;
-    background-color: black;
+  width: 1px;
+  height: calc(var(--intro-active, 0) * 8rem);
+  margin: 0 3rem;
+  background-color: black;
 
-    transition: height 0.2s cubic-bezier(0.77, 0, 0.175, 1);
+  transition: height 0.2s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 .description {
-    text-align: left;
-    opacity: calc(var(--intro-active, 0));
-    transform: translateX(calc(var(--intro-active, -0.5) * 0.5rem - 0.5rem));
+  text-align: left;
+  opacity: calc(var(--intro-active, 0));
+  transform: translateX(calc(var(--intro-active, -0.5) * 0.5rem - 0.5rem));
 
-    transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1), transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
-    transition-delay: 0.1s;
+  transition:
+    opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1),
+    transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
+  transition-delay: 0.1s;
 
-    h3 {
-        margin: 0;
-        font-size: 1.3rem;
-    }
+  h3 {
+    margin: 0;
+    font-size: 1.3rem;
+  }
 
-    .affiliation {
-        margin: 0.5rem 0 1.2rem;
-        color: #2d7282;
-    }
+  .affiliation {
+    margin: 0.5rem 0 1.2rem;
+    color: #2d7282;
+  }
 }
 
 .active {
-    --intro-active: 1;
+  --intro-active: 1;
 }
 
 @media (max-width: 768px) {
-    .wrapper {
-        flex-direction: column;
+  .wrapper {
+    flex-direction: column;
+  }
+
+  .icon {
+    width: 8rem;
+    height: 8rem;
+
+    transform: translateY(calc(var(--intro-active, -1) * -1rem + 1rem));
+  }
+
+  .divider {
+    height: 1px;
+    width: calc(var(--intro-active, 0) * 8rem);
+    margin: 3rem 0;
+    transition: width 0.2s cubic-bezier(0.77, 0, 0.175, 1);
+  }
+
+  .description {
+    transform: translateY(calc(var(--intro-active, -0.5) * 0.5rem - 0.5rem));
+
+    h3 {
+      font-size: 1.1rem;
     }
 
-    .icon {
-        width: 8rem;
-        height: 8rem;
-
-        transform: translateY(calc(var(--intro-active, -1) * -1rem + 1rem));
+    .affiliation {
+      font-size: 0.8rem;
     }
-
-    .divider {
-        height: 1px;
-        width: calc(var(--intro-active, 0) * 8rem);
-        margin: 3rem 0;
-        transition: width 0.2s cubic-bezier(0.77, 0, 0.175, 1);
-    }
-
-    .description {
-        transform: translateY(calc(var(--intro-active, -0.5) * 0.5rem - 0.5rem));
-
-        h3 {
-            font-size: 1.1rem;
-        }
-
-        .affiliation {
-            font-size: 0.8rem;
-        }
-    }
-
+  }
 }
