--- a/src/features/components/index/TopSection/RecentPhoto/styles.module.css
+++ b/src/features/components/index/TopSection/RecentPhoto/styles.module.css
@@ -1,115 +1,121 @@
 .wrapper {
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  background-color: black;
+
+  position: relative;
+
+  img {
+    position: absolute;
+    z-index: 5;
     width: 100%;
     height: 100%;
-    max-height: 100vh;
-    background-color: black;
+    object-fit: contain;
+  }
 
-    position: relative;
+  .nophoto {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    img {
-        position: absolute;
-        z-index: 5;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
+    p {
+      color: white;
     }
-
-    .nophoto {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        p {
-            color: white;
-        }
-    }
+  }
 }
 
 .overlay {
-    z-index: 10;
+  z-index: 10;
 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 1rem 2rem;
+
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.8) 0%,
+    rgba(255, 255, 255, 0) 20%,
+    rgba(255, 255, 255, 0) 80%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+
+  .header {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
     padding: 1rem 2rem;
 
-    background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,0.8) 0%, rgba(255,255,255,0) 20%, rgba(255,255,255,0) 80%, rgba(0,0,0,0.8) 100%);
+    font-family: 'Montserrat', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-end;
-
-    .header {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding: 1rem 2rem;
-
-        font-family: "Montserrat", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 400;
-        font-style: normal;
-        color: white;
-
-        .place {
-            font-size: 1.2rem;
-            margin-bottom: 0.2rem;
-        }
-
-        .date {
-            margin: 0;
-            font-size: 1.0rem;
-        }
+    .place {
+      font-size: 1.2rem;
+      margin-bottom: 0.2rem;
     }
 
-    .title {
-        font-family: "Montserrat", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 400;
-        font-style: normal;
-
-        color: white;
-        font-size: 2rem;
-        padding: 1rem 0 0;
-        margin: 0;
-        border-top: 1px solid white;
+    .date {
+      margin: 0;
+      font-size: 1rem;
     }
+  }
 
-    .cc {
-        font-size: 0.8rem;
-        color: lightgray;
-    }
+  .title {
+    font-family: 'Montserrat', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+
+    color: white;
+    font-size: 2rem;
+    padding: 1rem 0 0;
+    margin: 0;
+    border-top: 1px solid white;
+  }
+
+  .cc {
+    font-size: 0.8rem;
+    color: lightgray;
+  }
 }
 
 .background {
-    z-index: 0;
+  z-index: 0;
 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
-    overflow: hidden;
+  overflow: hidden;
 
-    img {
-        width: calc(100% + 60px);
-        height: calc(100% + 60px);
-        margin: -30px;
-        object-fit: cover;
-        filter: blur(30px) brightness(0.9);
-    }
+  img {
+    width: calc(100% + 60px);
+    height: calc(100% + 60px);
+    margin: -30px;
+    object-fit: cover;
+    filter: blur(30px) brightness(0.9);
+  }
 }
 
 @media (max-width: 1180px) {
-    .wrapper {
-        min-height: 100vh;
-    }
+  .wrapper {
+    min-height: 100vh;
+  }
 }
