--- a/src/features/components/index/TopSection/RecentPhoto/styles.module.css
+++ b/src/features/components/index/TopSection/RecentPhoto/styles.module.css
@@ -1,121 +1,156 @@
 .wrapper {
-  width: 100%;
-  height: 100%;
-  max-height: 100vh;
-  background-color: black;
-
-  position: relative;
-
-  img {
-    position: absolute;
-    z-index: 5;
     width: 100%;
     height: 100%;
-    object-fit: contain;
-  }
+    max-height: 100vh;
+    background-color: black;
 
-  .nophoto {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: relative;
 
-    p {
-      color: white;
+    img {
+        position: absolute;
+        z-index: 5;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
-  }
+
+    .nophoto {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        p {
+            color: white;
+        }
+    }
 }
 
 .overlay {
-  z-index: 10;
+    z-index: 10;
 
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 1rem 2rem;
-
-  background: rgb(0, 0, 0);
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 0.8) 0%,
-    rgba(255, 255, 255, 0) 20%,
-    rgba(255, 255, 255, 0) 80%,
-    rgba(0, 0, 0, 0.8) 100%
-  );
-
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-end;
-
-  .header {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
     padding: 1rem 2rem;
 
-    font-family: 'Montserrat', sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    color: white;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0.8) 0%,
+            rgba(255, 255, 255, 0) 20%,
+            rgba(255, 255, 255, 0) 80%,
+            rgba(0, 0, 0, 0.8) 100%
+    );
 
-    .place {
-      font-size: 1.2rem;
-      margin-bottom: 0.2rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    gap: 1rem;
+
+    .header {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 1rem 2rem;
+
+        font-family: 'Montserrat', sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        color: white;
+
+        .place {
+            font-size: 1.2rem;
+            margin-bottom: 0.2rem;
+        }
+
+        .date {
+            margin: 0;
+            font-size: 1rem;
+        }
     }
 
-    .date {
-      margin: 0;
-      font-size: 1rem;
+    .title {
+        font-family: 'Montserrat', sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+
+        color: white;
+        font-size: 2rem;
+        padding: 1rem 0 0;
+        margin: 0;
+        border-top: 1px solid white;
+        white-space: nowrap;
     }
-  }
 
-  .title {
-    font-family: 'Montserrat', sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-
-    color: white;
-    font-size: 2rem;
-    padding: 1rem 0 0;
-    margin: 0;
-    border-top: 1px solid white;
-  }
-
-  .cc {
-    font-size: 0.8rem;
-    color: lightgray;
-  }
+    .cc {
+        font-size: 0.8rem;
+        color: lightgray;
+    }
 }
 
 .background {
-  z-index: 0;
+    z-index: 0;
 
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
-  overflow: hidden;
+    overflow: hidden;
 
-  img {
-    width: calc(100% + 60px);
-    height: calc(100% + 60px);
-    margin: -30px;
-    object-fit: cover;
-    filter: blur(30px) brightness(0.9);
-  }
+    img {
+        width: calc(100% + 60px);
+        height: calc(100% + 60px);
+        margin: -30px;
+        object-fit: cover;
+        filter: blur(30px) brightness(0.9);
+    }
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+.descwrapper {
+    width: 100%;
+    height: 2rem;
+    padding: 0 1rem 0.77rem 0;
+    overflow: hidden;
+    position: relative;
+
+    span {
+        position: absolute;
+        top: -0.26rem;
+        left: 0;
+        color: white;
+        white-space: nowrap;
+        animation: scroll 10s linear infinite running;
+    }
 }
 
 @media (max-width: 1180px) {
-  .wrapper {
-    min-height: 100vh;
-  }
+    .wrapper {
+        min-height: 100vh;
+    }
+}
+
+@media (max-width: 768px) {
+    .overlay {
+        .title {
+            font-size: 1.5rem;
+        }
+    }
 }
