--- a/src/features/components/index/Friends/styles.module.css
+++ b/src/features/components/index/Friends/styles.module.css
@@ -1,7 +1,7 @@
 .friends {
   display: flex;
   gap: 3rem;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-wrap: wrap;
 }
