--- a/src/features/components/index/TopSection/RecentPhoto/styles.module.css
+++ b/src/features/components/index/TopSection/RecentPhoto/styles.module.css
@@ -153,5 +153,15 @@
     .title {
       font-size: 1.5rem;
     }
+
+    .header {
+      .place {
+        font-size: 1rem;
+      }
+
+      .date {
+        font-size: 0.85rem;
+      }
+    }
   }
 }
