--- a/src/features/components/index/TopSection/RecentPhoto/styles.module.css
+++ b/src/features/components/index/TopSection/RecentPhoto/styles.module.css
@@ -118,7 +118,7 @@
 
 @keyframes scroll {
   0% {
-    transform: translateX(100%);
+    transform: translateX(0);
   }
   100% {
     transform: translateX(-100%);
